Fixed drop-choices not showing for logged out users, made whole H5 Banner button clickable

--- a/src/sfp.css
+++ b/src/sfp.css
@@ -695,6 +695,7 @@ ul#image-preview-list {
 	font-weight: bold;
 	margin-top: 2px;
 	color: rgb(255, 255, 255) !important;
+	position: absolute;
  }
 
 .drop-choices a.choice {color: #FFF;}
@@ -1043,7 +1044,7 @@ body.comments-page .link {
  }
 
 body.comments-page .sitetable {
-	position: relative;
+	/*position: relative;*/
 	z-index: 2;
  }
 
@@ -1064,7 +1065,7 @@ body.comments-page .sitetable {
 	top: -110px;
 	margin-bottom: -90px;
 	margin-top: -160px;
-	padding-top: 136px;
+	padding-top: 145px;
 	clear: left;
  }
 
@@ -3100,7 +3101,7 @@ html[lang="dm"] .toc ul {background: transparent;}
         font-size: 12px;
 }
     .side .titlebox .md h5 {
-    display: block;
+    	display: block;
         background-color: #EA504E;
         border: none;
         font-size: 18px;
@@ -3117,13 +3118,18 @@ html[lang="dm"] .toc ul {background: transparent;}
         z-index: 0;
         height: auto;
         top: 202px;
-        padding: 11px 11px 11px 16px;
+        padding: 1px 1px 1px 1px;
         margin: 0;
         white-space: nowrap;
         overflow: hidden;
 }
 
 .side .titlebox .md h5 a {
+	display: block;
+	width: 100%;
+	height: 100%;
+	padding: 11px 11px 11px 16px;
+	overflow: hidden;
     font-style: none;
     color: white;
 }
@@ -3146,13 +3152,13 @@ html[lang="dm"] .toc ul {background: transparent;}
     color:#fff;
 }
 
-.linkflair-mod2 .linkflairlabel {
+.linkflair-mod2 span.linkflairlabel {
 	color: white;
 	background-color: #EA504E ;
 }
 body:not(.moderator) .flairsample-left .linkflair-mod2 { display: none; }
 
-.linkflair-mod2 .linkflairlabel + a {
+.linkflair-mod2 span.linkflairlabel + a {
 	font-weight: bold;
 	color: black;
 }
